--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,14 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.1
-loader_version=0.14.17
+minecraft_version=1.20.1
+loader_version=0.14.21
 #Fabric api
-fabric_version=0.76.0+1.19.4
+fabric_version=0.86.0+1.20.1
 # Mod Properties
-mod_version=2.2.0
+mod_version=2.3.0
 maven_group=org.samo_lego
 archives_base_name=clientstorage
 # Dependencies
-modmenu_version=4.0.6
-yacl_version=2.3.0
+modmenu_version=7.2.1
+yacl_version=3.0.3+1.20
